--- a/index.html
+++ b/index.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Weather App</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
-    <style>
-      @import url('https://fonts.cdnfonts.com/css/product-sans');
-    </style>
-    
-</head>
-<body class="text-center">
-    <main>
-        <h1 class="banner p-3">Weather</h1>
-        <div class="form-group">
-            <input id="city-input" class="form-control form-control-lg" type="text" placeholder="Search City 🌝">
-        </div>
-        <button type="button" onclick="searchCity()" class="btn btn-lg btn-dark">Search</button>
-        <div id="weather-output" class="mt-3">
-          <div class="card-deck mb-3 text-center">
-              <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                  <h4 id="city-name" class="my-0 font-weight-normal"> 🌞⛅️🌧❄️ </h4>
-                </div>
-                <div class="card-body">
-                  <h1 id="weather-type" class="card-title"> 🦖 </h1>
-                  <ul class="list-unstyled mt-3 mb-4">
-                    <li>🌝 Current Temperature: <span id="temp"> 🦖 </span>°</li>
-                  </ul>
-                </div>
-              </div>
-          </div>
-        </div>
+<html lang="en">
 
-        <img id="flag" src="" alt="">
-    </main>
+<head>
+    <meta charset="UTF-8">
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1 class="banner">Weather</h1>
+    <div class="weather-container">
+        <div class="weather-box"> 
+            <h2 class="banner"> 🌞⛅️🌧❄️ </h2>
+            <h2 id="temperature"></h2>
+            <p id="condition"></p>
+            <p id="location"></p>
+        </div>
+        <br />
+        <input type="text" placeholder="Search City 🌝" id="search-bar">
+        <br />
+        <button id="search-btn">Search</button>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
